--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.14.3",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
     "pinia": "^2.0.11",
-    "quasar": "^2.6.0",
+    "quasar": "^2.7.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
