--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,6 @@ jobs:
       - run: npm run build --if-present
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.3.4
-        env:
+        with:
           token: ${{ secrets.GITHUB_TOKEN }}
           folder: dist/spa
